<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="grupo19.locmess19.Activities.MessagesActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editUsername"
            android:ems="15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/editPassword"
            android:ems="15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginStart="200dp">

            <Button
                android:id="@+id/apply_profile_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:ems="6"
                android:enabled="false"
                android:text="@string/apply_changes"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_keys"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"/>

        <ListView
            android:id="@+id/keys_preview_list"
            android:padding="10dp"
            android:layout_width="315dp"
            android:layout_height="200dp"/>

            <Button
                android:id="@+id/add_key_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:text="@string/add_key" />



    </LinearLayout>


</RelativeLayout>
