<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor"
    tools:context="grupo19.locmess19.Activities.ViewLocationActivity">

    <TextView
        android:id="@+id/location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/backtologin"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/backtologin"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/location_name" />

    <TextView
        android:id="@+id/wifi_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Wifi Id"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/location_name"
        android:layout_alignLeft="@+id/location_name"
        android:layout_alignStart="@+id/location_name" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/latitude"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/wifi_id"
        android:layout_alignLeft="@+id/location_name"
        android:layout_alignStart="@+id/location_name" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/longitude"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/latitude"
        android:layout_alignLeft="@+id/latitude"
        android:layout_alignStart="@+id/latitude" />

    <TextView
        android:id="@+id/radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/radius"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/longitude"
        android:layout_alignLeft="@+id/longitude"
        android:layout_alignStart="@+id/longitude" />


    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:onClick="saveLocation"
        android:text="Back"
        android:layout_below="@+id/radius"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
